--- a/index.html
+++ b/index.html
@@ -16,27 +16,17 @@
 </head>
 
 <body style="font-family: sans-serif">
-
-  <style>
-    /* a.nav-link.active {
-      font-weight: bolder;
-    } */
-  </style>
   <div>
-    <div class="p-2 bg-gradient bg-success text-white text-center">
-      <h2>Bootstrap Exercise</h2>
-      <p>Resize this responsive page to see the effect!</p>
-    </div>
     <header>
-      <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <nav class="navbar navbar-expand-md navbar-light bg" style="background-color: tan">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#/">#Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topnav"
             aria-controls="topnav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="topnav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: larger;">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="unordered-list1">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" data-navigo href="/">Home</a>
               </li>
