--- a/pages/cars/cars.html
+++ b/pages/cars/cars.html
@@ -1,6 +1,9 @@
 <div class="template">
   <link href="../../lib/paginator/paginate.css" rel="stylesheet">
   <div>
+    <h1 class="h1-margin">
+      Table Name
+    </h1>
     <table class="table">
       <thead>
         <tr>
