--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,18 +1,40 @@
 <div class="template">
   <div class="row">
     <div class="col-md-6">
-      <h2>Info about this exercise</h2>
-      <p style="font-size: large;font-style: italic" id="id-joke"></p>
+      <h1 class="h1-margin">Titel 1</h1>
       <p>
-        <a href="https://docs.google.com/document/d/1e_dgdN3mDF7KWUR_QOrqcYku_m3R94jyucbEceUh9AQ/edit?usp=sharing"
-          target="blank">Find the exercise here</a>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       </p>
     </div>
     <div class="col-md-4">
-      <div>
-        <p style="font-size: large ;">Programming 2 (Datamatiker)</p>
-        <image src="../../images/KEA_EN.png" style="width:70%"></image>
-      </div>
+      <h1 class="h1-margin">Titel 2</h1>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
+    </div>
+    <div class="col-md-3">
+      <h1 class="h1-margin">Titel 3</h1>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
+    </div>
+    <div class="col-md-8">
+      <h1 class="h1-margin">Titel 4</h1>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
     </div>
   </div>
 </div>
