--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bootstrap Demo</title>
+  <title>No Title </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -31,10 +31,7 @@
                 <a class="nav-link active" aria-current="page" data-navigo href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cars" data-navigo>Cars</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/cars-v2" data-navigo>Cars - Bootstrap</a>
+                <a class="nav-link" href="/page1" data-navigo>Page 1</a>
               </li>
             </ul>
           </div>
