--- a/pages/page1/page1.html
+++ b/pages/page1/page1.html
@@ -7,10 +7,10 @@
       <thead class="customThead">
         <tr>
           <th scope="col">#</th>
-          <th scope="col"><a id="header-brand" href="">col1</a></th>
-          <th scope="col">col2</th>
-          <th scope="col">col3</th>
-          <th scope="col">col4</th>
+          <th scope="col"><a id="header-brand" href="">Col 1</a></th>
+          <th scope="col">Col 2</th>
+          <th scope="col">Col 3</th>
+          <th scope="col">Col 4</th>
         </tr>
       </thead>
       <tbody id="tbody">
