--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="/page1" data-navigo>Page 1</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/page2" data-navigo>Page 2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/page3" data-navigo>Page 3</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/page4" data-navigo>Page 4</a>
+              </li>
             </ul>
           </div>
         </div>
