--- a/pages/page2/page2.html
+++ b/pages/page2/page2.html
@@ -1,3 +1,36 @@
 <div class="template">
-    <h1 class="h1-margin">Mangler Indhold</h1>
+    <h1 class="h1-margin">Create</h1>
+    <form class="needs-validation" novalidate>
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <label for="input1">Input 1</label>
+                <input type="text" class="form-control" id="input1" required>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="input2">Input 2</label>
+                <input type="text" class="form-control" id="input2" required>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="input3">Input 3</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="input3" aria-describedby="inputGroupPrepend" required>
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-5 mb-3">
+                <label for="input4">Input 4</label>
+                <input type="text" class="form-control" id="input4" required>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="input5">State</label>
+                <input type="text" class="form-control" id="input5" required>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="input6">Zip</label>
+                <input type="text" class="form-control" id="input6" required>
+            </div>
+        </div>
+        <button class="btn btn-primary" type="submit" id="createSubmitBtn">Submit form</button>
+    </form>
 </div>
