--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>No Title </title>
+  <title>Mo's Template</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href="./pages/error/error.css" rel="stylesheet">
@@ -28,7 +28,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="topnav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="unordered-list1">
+            <ul class="nav nav-tabs" style="justify-content: center" id="unordered-list1">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" data-navigo href="/">Home</a>
               </li>
