sort for hvert header mangler

--- a/pages/page1/page1.html
+++ b/pages/page1/page1.html
@@ -7,10 +7,10 @@
       <thead class="customThead">
         <tr>
           <th scope="col">#</th>
-          <th scope="col"><a id="header-brand" href="">Col 1</a></th>
-          <th scope="col">Col 2</th>
-          <th scope="col">Col 3</th>
-          <th scope="col">Col 4</th>
+          <th scope="col"><a id="header-brand" href="">Brand</a></th>
+          <th scope="col"><a id="header-model" href="">Model</a></th>
+          <th scope="col"><a id="header-color" href="">Color</a></th>
+          <th scope="col"><a id="header-kilometers" href="">Kilometers</a></th>
         </tr>
       </thead>
       <tbody id="tbody">
