--- a/pages/page2/page2.html
+++ b/pages/page2/page2.html
@@ -1,5 +1,6 @@
 <div class="template">
     <h1 class="h1-margin">Create</h1>
+    <h2 id="responseText" style="color: green"></h2>
     <form class="needs-validation" novalidate>
         <div class="form-row">
             <div class="col-md-4 mb-3">
@@ -23,13 +24,14 @@
                 <input type="text" class="form-control" id="input4" required>
             </div>
             <div class="col-md-3 mb-3">
-                <label for="input5">State</label>
+                <label for="input5">Input 5</label>
                 <input type="text" class="form-control" id="input5" required>
             </div>
-            <div class="col-md-3 mb-3">
+            <!-- <div class="col-md-3 mb-3">
                 <label for="input6">Zip</label>
                 <input type="text" class="form-control" id="input6" required>
             </div>
+            -->
         </div>
         <button class="btn btn-primary" type="submit" id="createSubmitBtn">Submit form</button>
     </form>
